Revision history for Bio::RNA::RNAaliSplit

0.11
	- optional R-scape processing in RNAalisplit.pl
	- add a separate Subtypes modules
	- add AliHandler.pm
	- add AliFeature.pm
	- refactor RNAaliSplit.pm to make use of the above classes

0.10	Fri Apr 05 2019
	- add constrained base pair distance -m dBc

0.09	Mon Jan 07 2019
	- use Test2::V0 framework instead of Test::More
	- fix a typo in scripts/RNAalisplit.pl
	- overall refactoring

0.08	Sat Jan 05 2019
	- require R-scape v1.2.2 or above
	- employ R-scape evaluation in scripts/RNAalisplit.pl
	- refactored WrapRscape.pm
	- refactored and extended WrapRscape tests
	- ship with share/aln/RF00050.part.stk (for testing)

0.07	Sat Dec 29 2018
	- catch & properly handle R-scape output status
	- added 'format' and 'SS_cons' attributes to WrapRNAalifold.pm
	- refactored WrapRscape tests
	- updated shipped File::ShareDir::Install to v0.13 

0.06	Wed Feb 28 2018
        - added R-scape wrapper
	- added scripts/eval_alignment.pl
	- added Path::Class::File dependency to Makefile.PL
	- added WrapRscape test

0.05	Sun May 28 2017
	- ship with Version::Control for checking versions of third party
	  modules 
	- remove obsolete symbols
	- use FileDirUtil consistently instead of custom FileDir.pm 

0.04	Sun Mar 12 2017
	- fixed an error in MANIFEST; File::ShareDir::Install v0.11 is now
	  shipped with the distribution
	- strict depencency on ViennaRNA >=v2.3.4 
	- use Test::Prereq for dependency testing

0.03    Fri Mar 03 2017
	- initial release
        - packaged for distribution as Perl module